fix(site): Link colour in dark mode

--- a/web/src/components/Common/BlogPost/BlogPost.module.scss
+++ b/web/src/components/Common/BlogPost/BlogPost.module.scss
@@ -135,6 +135,13 @@
     color: $color-primary-yellow;
   }
 
+  .Content a {
+    color: $color-primary-yellow;
+    &:hover {
+      color: $color-primary-red;
+    }
+  }
+
   .TitleWrapper {
     &::before {
       background-image: url('/asset/overlay2white.svg');
